# DroneApp

./: CMakeLists.txt
DroneOnboardController/: CMakeLists.txt  CameraModule.cpp  CameraModule.h  CpuInfo.cpp  Dataset.cpp  Dataset.h  DroneImage.cpp  DroneImage.h  MAVConnector.cpp  MAVConnector.h  Message.cpp  Message.h  OdometryModule.cpp  OdometryModule.h  PX4Comannder.cpp  PX4Comannder.h  Settings.cpp  Settings.h  StatsServer.cpp  StatsServer.h  StoppableThread.cpp  StoppableThread.h  command.cpp  command.h  commandinput.cpp  commandinput.h  depthmapcalibrator.cpp  depthmapcalibrator.h  depthmapcalibrator.ui  dmcalibrator.cpp  dmcalibrator.h  dmcalibrator.ui  joystickinput.cpp  joystickinput.h  main.cpp
DroneOnboardController/Python/: Main.py  PXConnector.py
DroneOnboardController/temp files/: CMakeLists.txt  main.cpp
DroneStatsServer/: CMakeLists.txt  VehicleData.cpp  VehicleData.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h  statsclient.cpp  statsclient.h
Utils/: Messages.h
